--- a/static/css/styleguide.css
+++ b/static/css/styleguide.css
@@ -174,12 +174,12 @@ a:focus, a:hover, a:active {
 
 @font-face {
   font-family: "knet";
-  src: url('../fonts/knet.woff?1370556580') format("woff"), url('../fonts/knet.ttf?1370556580') format("truetype");
+  src: url('../fonts/knet.woff?1370665984') format("woff"), url('../fonts/knet.ttf?1370665984') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
-.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status:before, .delete-story:before, .user-nav .fb-login:before, .announce:before, .message:before, .story.hidden:before, .story.private:before, .story-private-notice:before, .icons-demo div:nth-child(1):before, .icons-demo div:nth-child(2):before, .icons-demo div:nth-child(3):before, .icons-demo div:nth-child(4):before, .icons-demo div:nth-child(5):before, .icons-demo div:nth-child(6):before, .icons-demo div:nth-child(7):before, .icons-demo div:nth-child(8):before, .icons-demo div:nth-child(9):before, .icons-demo div:nth-child(10):before, .icons-demo div:nth-child(11):before, .icons-demo div:nth-child(12):before, .icons-demo div:nth-child(13):before, .icons-demo div:nth-child(14):before, [data-icon]:before {
+.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status:before, .delete-story:before, .user-nav .fb-login:before, .announce:before, .message:before, .loading-icon:before, .story.hidden:before, .story.private:before, .story-private-notice:before, .icons-demo div:nth-child(1):before, .icons-demo div:nth-child(2):before, .icons-demo div:nth-child(3):before, .icons-demo div:nth-child(4):before, .icons-demo div:nth-child(5):before, .icons-demo div:nth-child(6):before, .icons-demo div:nth-child(7):before, .icons-demo div:nth-child(8):before, .icons-demo div:nth-child(9):before, .icons-demo div:nth-child(10):before, .icons-demo div:nth-child(11):before, .icons-demo div:nth-child(12):before, .icons-demo div:nth-child(13):before, .icons-demo div:nth-child(14):before, .icons-demo div:nth-child(15):before, [data-icon]:before {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -263,6 +263,10 @@ a:focus, a:hover, a:active {
 
 .story.hidden:before, .icons-demo div:nth-child(14):before {
   content: "\e00d";
+}
+
+.loading-icon:before, .icons-demo div:nth-child(15):before {
+  content: "\e00e";
 }
 
 button {
@@ -753,6 +757,181 @@ label {
 
 .js .message.js-warning {
   display: none;
+}
+
+@-moz-keyframes loadingStart {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes loadingStart {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes loadingStart {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes loadingStart {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes loading {
+  0% {
+    -moz-transform: scale(1, 1);
+    transform: scale(1, 1);
+    color: rgba(0, 116, 116, 0.25);
+  }
+
+  50% {
+    -moz-transform: scale(1.5, 1.5);
+    transform: scale(1.5, 1.5);
+    color: rgba(0, 116, 116, 0.5);
+  }
+
+  100% {
+    -moz-transform: scale(1, 1);
+    transform: scale(1, 1);
+    color: rgba(0, 116, 116, 0.25);
+  }
+}
+
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+    color: rgba(0, 116, 116, 0.25);
+  }
+
+  50% {
+    -webkit-transform: scale(1.5, 1.5);
+    transform: scale(1.5, 1.5);
+    color: rgba(0, 116, 116, 0.5);
+  }
+
+  100% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+    color: rgba(0, 116, 116, 0.25);
+  }
+}
+
+@-o-keyframes loading {
+  0% {
+    -o-transform: scale(1, 1);
+    transform: scale(1, 1);
+    color: rgba(0, 116, 116, 0.25);
+  }
+
+  50% {
+    -o-transform: scale(1.5, 1.5);
+    transform: scale(1.5, 1.5);
+    color: rgba(0, 116, 116, 0.5);
+  }
+
+  100% {
+    -o-transform: scale(1, 1);
+    transform: scale(1, 1);
+    color: rgba(0, 116, 116, 0.25);
+  }
+}
+
+@keyframes loading {
+  0% {
+    transform: scale(1, 1);
+    color: rgba(0, 116, 116, 0.25);
+  }
+
+  50% {
+    transform: scale(1.5, 1.5);
+    color: rgba(0, 116, 116, 0.5);
+  }
+
+  100% {
+    transform: scale(1, 1);
+    color: rgba(0, 116, 116, 0.25);
+  }
+}
+
+.loading {
+  position: relative;
+}
+.loading .loading-overlay {
+  position: absolute;
+  top: 50%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-animation: loadingStart 3s 300ms linear 1 both;
+  -moz-animation: loadingStart 3s 300ms linear 1 both;
+  -o-animation: loadingStart 3s 300ms linear 1 both;
+  animation: loadingStart 3s 300ms linear 1 both;
+  text-align: center;
+  z-index: 990;
+}
+
+.loading-spinner {
+  margin: -1.91667rem auto 0;
+  color: #191919;
+  text-align: center;
+}
+
+.loading-text {
+  font-size: 14px;
+  font-size: 0.77778rem;
+  line-height: 23px;
+  line-height: 1.27778rem;
+  margin-top: -35px;
+  margin-top: -1.91667rem;
+  text-shadow: white 0 0 1em, white 0 0 0.5em, white 0 0 0.25em;
+  position: relative;
+  display: block;
+  text-transform: uppercase;
+  font-weight: bold;
+  z-index: 992;
+}
+.loading-text:after {
+  content: "...";
+}
+
+.loading-icon {
+  font-size: 43px;
+  font-size: 2.38889rem;
+  line-height: 58px;
+  line-height: 3.19444rem;
+  text-shadow: rgba(255, 255, 255, 0.75) 0 0 0.5em;
+  -webkit-animation: loading 3s linear infinite;
+  -moz-animation: loading 3s linear infinite;
+  -o-animation: loading 3s linear infinite;
+  animation: loading 3s linear infinite;
+  display: block;
+  vertical-align: middle;
+}
+.loading-icon:before {
+  vertical-align: middle;
 }
 
 .teacher-detail {
@@ -1860,6 +2039,26 @@ body {
 }
 .icons-demo div:nth-child(14):after {
   content: "eye-blocked";
+  font-size: 18px;
+  font-size: 1rem;
+  line-height: 23px;
+  line-height: 1.27778rem;
+}
+.icons-demo div:nth-child(15) {
+  display: block;
+  float: left;
+  margin-right: 2.55556rem;
+}
+.icons-demo div:nth-child(15):focus, .icons-demo div:nth-child(15):hover, .icons-demo div:nth-child(15):active {
+  color: #94001a;
+}
+.icons-demo div:nth-child(15):before {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: .4em;
+}
+.icons-demo div:nth-child(15):after {
+  content: "heart";
   font-size: 18px;
   font-size: 1rem;
   line-height: 23px;
