--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -15,6 +15,7 @@ $icon-exit:           "\e00c";
 $icon-lock:           "\e001";
 $icon-eye:            "\e002";
 $icon-eye-blocked:    "\e00d";
+$icon-heart:          "\e00e";
 
 // Debug
 $debug: append($debug, icons);
@@ -32,7 +33,8 @@ $debug-icons: 'menu'            $icon-menu,
               'exit'            $icon-exit,
               'lock'            $icon-lock,
               'eye'             $icon-eye,
-              'eye-blocked'     $icon-eye-blocked;
+              'eye-blocked'     $icon-eye-blocked,
+              'heart'           $icon-heart;
 
 @mixin debug-icons {
   @debug '# Icons';
