--- a/sass/styleguide/_styleguide.scss
+++ b/sass/styleguide/_styleguide.scss
@@ -30,6 +30,7 @@ body {
 .sg-nav {
   @include span(25%);
   @include adjust-font-size-to($smallpx);
+  display: none;
 }
 
 .sg-nav-title {
@@ -40,7 +41,7 @@ body {
 // ----
 
 .sg-body {
-  @include span(last 75%)
+  // @include span(last 75%)
 }
 
 // Blocks
@@ -77,7 +78,9 @@ body {
 .code {
   @include adjust-font-size-to($xsmallpx, .75);
   font-family: monospace, sans-serif;
+  height: rhythm(12);
   overflow-x: auto;
+  resize: vertical;
 }
 
 // Doc Type
