--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -62,56 +62,56 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 @font-face {
   font-family: "CambridgeRound";
-  src: url('../fonts/cambridge_round-webfont.woff?1366338547') format("woff"), url('../fonts/cambridge_round-webfont.ttf?1366338547') format("truetype");
+  src: url('../fonts/cambridge_round-webfont.woff?1342738619') format("woff"), url('../fonts/cambridge_round-webfont.ttf?1358363476') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "CambridgeRound";
-  src: url('../fonts/cambridge_round_bold-webfont.woff?1366338547') format("woff"), url('../fonts/cambridge_round_bold-webfont.ttf?1366338547') format("truetype");
+  src: url('../fonts/cambridge_round_bold-webfont.woff?1342738619') format("woff"), url('../fonts/cambridge_round_bold-webfont.ttf?1358363476') format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "CambridgeRound";
-  src: url('../fonts/cambridge_round_it-webfont.woff?1366338547') format("woff"), url('../fonts/cambridge_round_it-webfont.ttf?1366338547') format("truetype");
+  src: url('../fonts/cambridge_round_it-webfont.woff?1342738619') format("woff"), url('../fonts/cambridge_round_it-webfont.ttf?1358363477') format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "CambridgeRoundCond";
-  src: url('../fonts/cambridge_round_cond-webfont.woff?1366338547') format("woff"), url('../fonts/cambridge_round_cond-webfont.ttf?1366338547') format("truetype");
+  src: url('../fonts/cambridge_round_cond-webfont.woff?1351286140') format("woff"), url('../fonts/cambridge_round_cond-webfont.ttf?1358363477') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "CambridgeRoundCond";
-  src: url('../fonts/cambridge_round_bold_cond-webfont.woff?1366338547') format("woff"), url('../fonts/cambridge_round_bold_cond-webfont.ttf?1366338547') format("truetype");
+  src: url('../fonts/cambridge_round_bold_cond-webfont.woff?1351286140') format("woff"), url('../fonts/cambridge_round_bold_cond-webfont.ttf?1358363476') format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "CambridgeRoundCond";
-  src: url('../fonts/cambridge_round_cond_it-webfont.woff?1366338547') format("woff"), url('../fonts/cambridge_round_cond_it-webfont.ttf?1366338547') format("truetype");
+  src: url('../fonts/cambridge_round_cond_it-webfont.woff?1351286140') format("woff"), url('../fonts/cambridge_round_cond_it-webfont.ttf?1358363477') format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "SquareSerif";
-  src: url('../fonts/SquareSerif-Book-webfont.woff?1366338547') format("woff"), url('../fonts/SquareSerif-Book-webfont.ttf?1366338547') format("truetype");
+  src: url('../fonts/SquareSerif-Book-webfont.woff?1342738619') format("woff"), url('../fonts/SquareSerif-Book-webfont.ttf?1358363476') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SquareSerif";
-  src: url('../fonts/SquareSerif-Bold-webfont.woff?1366338547') format("woff"), url('../fonts/SquareSerif-Bold-webfont.ttf?1366338547') format("truetype");
+  src: url('../fonts/SquareSerif-Bold-webfont.woff?1342738619') format("woff"), url('../fonts/SquareSerif-Bold-webfont.ttf?1358363476') format("truetype");
   font-weight: bold;
   font-style: normal;
 }
@@ -183,7 +183,7 @@ a:focus, a:hover, a:active {
 
 @font-face {
   font-family: "knet";
-  src: url('../fonts/knet.woff?1370639788') format("woff"), url('../fonts/knet.ttf?1370639788') format("truetype");
+  src: url('../fonts/knet.woff?1370641551') format("woff"), url('../fonts/knet.ttf?1370641551') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -344,40 +344,105 @@ button {
   line-height: 1.27778rem;
   color: #6f6f6f;
 }
+.form-help a:link, .form-help a:visited {
+  color: #338f8f;
+}
+.form-help a:focus, .form-help a:hover, .form-help a:active {
+  color: #94001a;
+}
 
-[type="text"], [type="email"], [type="password"], [type="url"], textarea {
+[type="text"], [type="email"], [type="url"],
+[type="password"], [type="datetime"], [type="date"], [type="time"], [type="number"], [multiple], textarea {
   margin: 0;
   padding: 0;
   border: 0;
 }
 
-[type="text"], [type="email"], [type="password"], [type="url"], textarea {
+[type="text"], [type="email"], [type="url"],
+[type="password"], [type="datetime"], [type="date"], [type="time"], [type="number"], [multiple], textarea, select {
+  font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-size: 1rem;
+  line-height: 23px;
+  line-height: 1.27778rem;
+}
+
+[type="text"], [type="email"], [type="url"],
+[type="password"], [type="datetime"], [type="date"], [type="time"], [type="number"], [multiple], textarea {
   border-width: 1px;
   border-width: 0.05556rem;
   border-style: solid;
   padding: 5px;
   padding: 0.26389rem;
-  font-size: 12px;
-  font-size: 0.66667rem;
-  line-height: 23px;
-  line-height: 1.27778rem;
+  font-size: 23px;
+  font-size: 1.27778rem;
+  line-height: 35px;
+  line-height: 1.91667rem;
+  -webkit-box-shadow: rgba(76, 76, 76, 0.5) 0 0 3px inset;
+  -moz-box-shadow: rgba(76, 76, 76, 0.5) 0 0 3px inset;
+  box-shadow: rgba(76, 76, 76, 0.5) 0 0 3px inset;
   display: block;
   width: 100%;
+  color: #6f6f6f;
+  background: rgba(229, 229, 229, 0.25);
   border-color: #b2b2b2;
 }
 
-[type="text"], [type="email"], [type="password"], [type="url"] {
+[type="text"]:focus, [type="email"]:focus, [type="url"]:focus,
+[type="password"]:focus, [type="datetime"]:focus, [type="date"]:focus, [type="time"]:focus, [type="number"]:focus, [multiple]:focus, textarea:focus {
+  border-color: #66abab;
+  outline: 0;
+}
+
+[type="text"]:focus:invalid, [type="email"]:focus:invalid, [type="url"]:focus:invalid,
+[type="password"]:focus:invalid, [type="datetime"]:focus:invalid, [type="date"]:focus:invalid, [type="time"]:focus:invalid, [type="number"]:focus:invalid, [multiple]:focus:invalid, textarea:focus:invalid {
+  border-color: #ee667e;
+}
+
+[type="text"], [type="email"], [type="url"],
+[type="password"], [type="datetime"], [type="date"], [type="time"], [type="number"] {
   height: 1.91667rem;
 }
 
-textarea {
-  min-height: 4.47222rem;
+[multiple], textarea {
+  height: 8.30556rem;
   resize: vertical;
 }
 
-label {
-  display: inline-block;
+[type="file"] {
+  display: block;
+}
+
+select {
+  display: block;
+  min-width: 50%;
+}
+
+[multiple] {
+  font-size: 18px;
+  font-size: 1rem;
+  line-height: 23px;
+  line-height: 1.27778rem;
+}
+
+[type="checkbox"] {
+  vertical-align: middle;
+}
+
+[type="number"] {
+  padding-top: 0;
+}
+
+.form-type, .radio-type, .checkbox-type {
+  font-size: 14px;
+  font-size: 0.77778rem;
+  line-height: 23px;
+  line-height: 1.27778rem;
   cursor: pointer;
+}
+
+.form-type {
+  font-weight: bold;
 }
 
 [role="banner"] {
@@ -676,7 +741,7 @@ label {
   height: 0;
   padding-top: 36.95833%;
   width: 100%;
-  background: url('../images/wordmark.svg?1369921673') no-repeat scroll top;
+  background: url('../images/wordmark.svg?1369776473') no-repeat scroll top;
   -webkit-background-size: 100% auto;
   -moz-background-size: 100% auto;
   -o-background-size: 100% auto;
