--- a/templates/styleguide/styleguide.html
+++ b/templates/styleguide/styleguide.html
@@ -21,6 +21,12 @@
         <li><a href="#icons-pattern">Icons</a></li>
       </ul>
     </li>
+    <li>
+      <b class="sg-nav-title">General</b>
+      <ul>
+        <li><a href="#forms-pattern">Forms</a></li>
+      </ul>
+    </li>
   </ul>
 </nav>
 
@@ -30,6 +36,9 @@
 {% include "styleguide/base/_size.html" with pattern_name="size" %}
 {% include "styleguide/base/_color.html" with pattern_name="color" %}
 {% include "styleguide/base/_icons.html" with pattern_name="icons" %}
+
+<!-- Forms -->
+{% include "styleguide/general/_forms.html" with pattern_name="forms" %}
 
 </div>
 {% endblock %}
