--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1028,6 +1028,7 @@ select {
   line-height: 150px;
   line-height: 8.30556rem;
   min-height: 7.66667rem;
+  display: block;
 }
 .toggle-addstory-body:focus, .toggle-addstory-body:hover, .toggle-addstory-body:active {
   color: #007474;
