Fix 'back where you were' link from create-profile.

--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -10,7 +10,7 @@
 </p>
 
 <p>
-  Otherwise, you can go <a href="profile_next">back to the page you were
+  Otherwise, you can go <a href="{{ profile_next }}">back to the page you were
   on</a>.
 </p>
 
