--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -10,8 +10,8 @@
 </p>
 
 <p>
-  Otherwise, you can go <a href="{{ profile_next }}">back to the page you were
-  on</a>.
+  If you're just here to submit stories for your favorite teachers, not receive
+  stories, you can <a href="{{ profile_next }}">skip this</a>.
 </p>
 
 <form method="POST">
